--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   pronouns         : "he/him/his"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Davie, FL, USA"
-  employer         : "Red Brick University"
+  employer         : "University of Florida"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "haojiecao@ufl.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
