--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Haojie Cao"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://haojiecao42.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://haojiecao42.github.io/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -28,7 +28,7 @@ author:
   location         : "Davie, FL, USA"
   employer         : "University of Florida"
   uri              : # URL
-  haojiecao@ufl.edu            : "haojiecao@ufl.edu" 
+  email            : "haojiecao@ufl.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
