--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Haojie Cao"
+title                    : "How we percieved nature and what are human-nature interactions"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
