--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "How we percieved nature and what are human-nature in
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://haojiecao42.github.io/
+url                      : https://haojiecao42.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
