--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "IMG_3591.jpg"
   name             : # "Haojie Cao"
-  pronouns         : "he/him/his"  
+  pronouns         : # "he/him/his"  
   bio              : # "Short biography for the left-hand sidebar"
   location         : "Davie, FL, USA"
   employer         : "University of Florida"
